find_package(Protobuf 3 REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})

#add include folder
include_directories("${CMAKE_SOURCE_DIR}/third_party/onnx_proto")
include_directories("${CMAKE_SOURCE_DIR}/third_party/tvm/include")
include_directories("${CMAKE_SOURCE_DIR}/source")

include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/third_party/tvm/3rdparty/dlpack/include")
include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/third_party/tvm/3rdparty/dmlc-core/include")
include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/third_party/tvm/3rdparty/rang/include")
include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/third_party/tvm/3rdparty/compiler-rt")
include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/third_party/tvm/3rdparty/picojson")

aux_source_directory(./utils AUX_SRC_LIST)
aux_source_directory(./onnx_op AUX_OP_LIST)
aux_source_directory(./onnx_op/ops AUX_ONNX_OPS_LIST)

find_library(TVM_LIBRARY         NAMES tvm         PATHS ${CMAKE_SOURCE_DIR}/third_party/tvm/build/ PATH_SUFFIXES lib)
find_library(TVM_RUNTIME_LIBRARY NAMES tvm_runtime PATHS ${CMAKE_SOURCE_DIR}/third_party/tvm/build/ PATH_SUFFIXES lib)

# the utils lib name
set(UTILS_NAME utils)

add_library(${UTILS_NAME} SHARED ${AUX_SRC_LIST} ${AUX_OP_LIST} ${AUX_ONNX_OPS_LIST})
target_link_libraries(${UTILS_NAME} PRIVATE ${Protobuf_LIBRARIES} ${TVM_LIBRARY})
target_compile_definitions(${UTILS_NAME} PRIVATE DMLC_USE_LOGGING_LIBRARY=<tvm/runtime/logging.h>)

function(GENERATE_EXECUTABLE name)
    add_executable(${name} ${name}.cpp ${CMAKE_SOURCE_DIR}/third_party/onnx_proto/onnx.proto3.pb.cc)
    target_link_libraries(${name} PRIVATE ${Protobuf_LIBRARIES} ${TVM_LIBRARY} ${UTILS_NAME})
    target_compile_definitions(${name} PRIVATE DMLC_USE_LOGGING_LIBRARY=<tvm/runtime/logging.h>)
endfunction()

GENERATE_EXECUTABLE(test_onnx_01_basic_info)
GENERATE_EXECUTABLE(test_onnx_02_relay_print)

GENERATE_EXECUTABLE(test_tvm_01_hello_world)
GENERATE_EXECUTABLE(test_tvm_02_ndarray)

GENERATE_EXECUTABLE(test_tvm_relay_01)
GENERATE_EXECUTABLE(test_tvm_relay_02_constant)
GENERATE_EXECUTABLE(test_tvm_relay_03_var)
GENERATE_EXECUTABLE(test_tvm_relay_04_type_infer)
GENERATE_EXECUTABLE(test_tvm_relay_05_conv2d)
GENERATE_EXECUTABLE(test_tvm_relay_06_relu)
GENERATE_EXECUTABLE(test_tvm_relay_07_elementwise_add)
GENERATE_EXECUTABLE(test_tvm_relay_08_concat)
GENERATE_EXECUTABLE(test_tvm_relay_09_max_pool2d)
GENERATE_EXECUTABLE(test_tvm_relay_10_dynamic_type)
GENERATE_EXECUTABLE(test_tvm_relay_11_cast)
GENERATE_EXECUTABLE(test_tvm_relay_12_elementwise_mul)
GENERATE_EXECUTABLE(test_tvm_relay_13_strided_slice)
GENERATE_EXECUTABLE(test_tvm_relay_14_fold_const)
GENERATE_EXECUTABLE(test_tvm_relay_15_resize2d)
GENERATE_EXECUTABLE(test_tvm_relay_16_reshape)
GENERATE_EXECUTABLE(test_tvm_relay_17_transpose)
GENERATE_EXECUTABLE(test_tvm_relay_18_shape_of)
GENERATE_EXECUTABLE(test_tvm_relay_19_global_avg_pool)
GENERATE_EXECUTABLE(test_tvm_relay_20_flatten)
GENERATE_EXECUTABLE(test_tvm_relay_21_dense)
GENERATE_EXECUTABLE(test_tvm_relay_22_elementwise_sub)
GENERATE_EXECUTABLE(test_tvm_relay_23_elementwise_div)
GENERATE_EXECUTABLE(test_tvm_relay_24_erf)
GENERATE_EXECUTABLE(test_tvm_relay_25_matmul)
GENERATE_EXECUTABLE(test_tvm_relay_26_sqrt)
GENERATE_EXECUTABLE(test_tvm_relay_27_squeeze)
GENERATE_EXECUTABLE(test_tvm_relay_28_softmax)
GENERATE_EXECUTABLE(test_tvm_relay_29_pow)
GENERATE_EXECUTABLE(test_tvm_relay_30_print)

GENERATE_EXECUTABLE(test_tvm_pass_01_pass_context)
GENERATE_EXECUTABLE(test_tvm_pass_02_query_passes)
GENERATE_EXECUTABLE(test_tvm_pass_03_dead_code_elimination)
GENERATE_EXECUTABLE(test_tvm_pass_04_fuse_op)